# testf

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/models/: config.txt
android/app/src/main/cpp/: CMakeLists.txt  Native.cc  Native.h  crash_handler.cc  pipeline.cc  pipeline.h
android/app/src/main/kotlin/com/autoclicker/app/: AutoClickAccessibilityService.kt  CrashReporter.kt  FloatingWindowService.kt  ImageMatcher.kt  MainActivity.kt  NativeBridge.kt  OcrNative.kt  OcrPredictor.kt  PointPickerOverlay.kt  ScreenCaptureService.kt  ScriptRunner.kt  ScriptRunnerService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_config.xml
lib/: app_state.dart  main.dart
lib/models/: script.dart
lib/pages/: home_page.dart  ocr_test_page.dart  script_editor_page.dart
lib/services/: native_service.dart  storage_service.dart
scripts/: patch_dynsym_bindings.py
